Closed Bug 361386 Opened 18 years ago Closed 18 years ago

Mingw build error in xpccomponents.cpp, error: no matching function for call to `nsAutoString::nsAutoString(jschar*, size_t)'

Categories

(Core :: XPConnect, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

After having updated my Firefox mingw debug trunk build, I get this build error:
NT64_T=1 -DMOZ_XUL=1 -DMOZ_PROFILELOCKING=1 -DMOZ_RDF=1 -DMOZ_MORK=1 -DMOZ_MORKR
EADER=1 -DMOZ_DLL_SUFFIX=\".dll\" -DJS_THREADSAFE=1 -DMOZ_REFLOW_PERF=1 -DMOZ_RE
FLOW_PERF_DSP=1 -DMOZILLA_LOCALE_VERSION=\"1.9a1\" -DMOZILLA_REGION_VERSION=\"1.
9a1\" -DMOZILLA_SKIN_VERSION=\"1.8\"  -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /cyg
drive/c/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents_Interfaces::GetInterfaces(PRUint32*, nsIID***)':

c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:106: warning: unused v
ariable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents_InterfacesByID::GetInterfaces(PRUint32*, nsIID**
*)':
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:452: warning: unused v
ariable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents_Classes::GetInterfaces(PRUint32*, nsIID***)':
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:787: warning: unused v
ariable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents_ClassesByID::GetInterfaces(PRUint32*, nsIID***)'
:
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:1043: warning: unused
variable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents_Results::GetInterfaces(PRUint32*, nsIID***)':
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:1318: warning: unused
variable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents_ID::GetInterfaces(PRUint32*, nsIID***)':
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:1551: warning: unused
variable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents_Exception::GetInterfaces(PRUint32*, nsIID***)':
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:1779: warning: unused
variable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCConstructor::GetInterfaces(PRUint32*, nsIID***)':
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:2073: warning: unused
variable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents_Constructor::GetInterfaces(PRUint32*, nsIID***)'
:
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:2339: warning: unused
variable 'rv'
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `n
sresult nsXPCComponents_utils_Sandbox::CallOrConstruct(nsIXPConnectWrappedNative
*, JSContext*, JSObject*, PRUint32, jsval*, jsval*, PRBool*)':
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:3284: error: no matchi
ng function for call to `nsAutoString::nsAutoString(jschar*, size_t)'
../../../../dist/include/string/nsTString.h:542: note: candidates are: nsAutoStr
ing::nsAutoString(const nsAString_internal&)
../../../../dist/include/string/nsTString.h:534: note:                 nsAutoStr
ing::nsAutoString(const nsSubstringTuple&)
../../../../dist/include/string/nsTString.h:528: note:                 nsAutoStr
ing::nsAutoString(const nsSubstring&)
../../../../dist/include/string/nsTString.h:521: note:                 nsAutoStr
ing::nsAutoString(const nsAutoString&)
../../../../dist/include/string/nsTString.h:515: note:                 nsAutoStr
ing::nsAutoString(const PRUnichar*, PRUint32) <near match>
../../../../dist/include/string/nsTString.h:508: note:                 nsAutoStr
ing::nsAutoString(PRUnichar)
../../../../dist/include/string/nsTString.h:503: note:                 nsAutoStr
ing::nsAutoString()
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp: In member function `v
irtual nsresult nsXPCComponents::GetInterfaces(PRUint32*, nsIID***)':
c:/mozilla/mozilla/js/src/xpconnect/src/xpccomponents.cpp:3580: warning: unused
variable 'rv'
make[5]: *** [xpccomponents.o] Error 1
make[5]: Leaving directory `/cygdrive/c/mozilla/mozilla/js/src/xpconnect/src'
make[4]: *** [libs] Error 2
make[4]: Leaving directory `/cygdrive/c/mozilla/mozilla/js/src/xpconnect'
make[3]: *** [libs_tier_gecko] Error 2
make[3]: Leaving directory `/cygdrive/c/mozilla/mozilla'
make[2]: *** [tier_gecko] Error 2
make[2]: Leaving directory `/cygdrive/c/mozilla/mozilla'
make[1]: *** [alldep] Error 2
make[1]: Leaving directory `/cygdrive/c/mozilla/mozilla'
make: *** [alldep] Error 2

When I back out the patch for bug 353731, this particular build error goes away.
I checked this in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Yes, that fixes the build error for me.
Status: RESOLVED → VERIFIED
Assignee: nobody → bzbarsky
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: