Fix MingW build bustage.  Bug 361386, review pending.